# Claude-Code-CLI-Hub

./: .bumpversion.toml  .gitignore  Makefile  README.md  claude-code-cli-hub.spec  generate_icons.py  main.py  pyproject.toml
.github/workflows/: release.yml
assets/: icon.icns
